--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,5 @@
+[build]
+  command = "pip install -r requirements.txt"
+
 [build.environment]
-PYTHON_VERSION = "3.12.2"
+  PYTHON_VERSION = "3.12.2"
