--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  command = "pip install -r requirements.txt"
+  command = "python --version && pip install -r requirements.txt"
+
 
 [build.environment]
   PYTHON_VERSION = "3.12.2"
