--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,5 @@
 [build]
-  command = "python --version && pip install -r requirements.txt"
-
+  command = "pyenv install 3.12.2 && pyenv global 3.12.2 && python --version && pip install -r requirements.txt"
 
 [build.environment]
   PYTHON_VERSION = "3.12.2"
